# smart-tree

./: .cursorignore  .git-remotes.yaml  .gitattributes  .gitignore  .gitmodules  .m8  .mcp.json  .tree-agent.json  2025-09-13-hi-claude-we-need-to-add-the-testfiles-with-re.txt  AGENTS.md  AI_ENHANCEMENTS.md  AI_THOUGHTS_CLAUDE.md  CHANGELOG.md  CLAUDE-WISHLIST.md  CLAUDE.md  CLAUDE.md.new  CODE_OF_CONDUCT.md  COMPARISON.md  CONTEXT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Context.md  FEATURE_FLAGS.md  FOKEN.md  FYI.md  ITS-JUST-LUNCH.md  LICENSE  LICENSE.md  MCP_EXPLORER_README.md  MCP_UPDATE_ANALYTICS.md  NOTES.md  PR_SUMMARY.md  README.md  README.md.bak  RELEASE_COMMANDS.md  RELEASE_NOTES_3.3.6.md  RELEASE_NOTES_4.0.0.md  RELEASE_NOTES_4.0.0_ALPHA.md  RELEASE_NOTES_v3.1.1.md  RELEASE_NOTES_v3.2.0.md  (+41 more)
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md  agents.json  config.yaml  daemon-state.json  daemon.pid
.gemini/: settings.json
.git-hooks/: pre-push
.github/: COPILOT_MCP_GUIDELINES.md  COPILOT_REPO_INSTRUCTIONS.md  SELF_HOSTED_RUNNER.md  copilot-instructions.md
.hive-mind/: hive.db-shm  hive.db-wal
.kilocode/: mcp.json
.mem8/: gathered_context.m8
.roo/: README.md  mcp.json  system-prompt-code
.swarm/: state.json
8t.is/: Cargo.toml  NOTES.md  README.md
8t.is/8t/api/: Cargo.toml
8t.is/8t/api/src/: main.rs
8t.is/8t/container/: Cargo.toml
8t.is/8t/container/src/: lib.rs
8t.is/8t/core/: Cargo.toml
8t.is/8t/core/src/: context.rs  contextualizer.rs  contextualizer_engine.rs  lib.rs  protocol.rs  quantize.rs  tool.rs
8t.is/8t/feedback/: Cargo.toml
8t.is/8t/feedback/src/: agent.rs  continuous.rs  lib.rs
8t.is/8tmux.is/: .gitignore
8t.is/8tmux.is/tmux-rtc/: README.md  nginx.conf.example
8t.is/8tmux.is/tmux-rtc/client/: app.js  index.html  styles.css
8t.is/8tmux.is/tmux-rtc/docs/: 8z-setup.md  proxy-setup.md
8t.is/8tmux.is/tmux-rtc/scripts/: manage.sh  tmux-setup.sh
8t.is/8tmux.is/tmux-rtc/server/: package-lock.json  package.json  server-ssl.js  server.js
8t.is/hetzner.8t.is/: README.md
8t.is/scripts/: manage.sh
8t.is/tmux-ai-party/: .env.example  .gitignore  .thedigs.json  CHANGELOG.md  CLAUDE-WISHLIST-SMART-TREE.md  CLAUDE.md  LAUNCHER_DEMO.md  README.md  TEST_RESULTS.md  context.md  mcp_server.py  pyproject.toml  remote_tmux.py  requirements.txt  setup_wizard.py  tai_auth_server.py  tai_remote_cli.py  test_demo.sh  tmux-ai  tmux-ai-launcher.py  tmux-ai-wrapper  tmux_attach.py  tmux_client.py  tmux_monitor.py  tmux_monitor_v2.py
8t.is/tmux-ai-party/config/: .wizard_complete  claude_desktop_example.json  config.yaml  config_v2.yaml  system_prompt.md  vault.yaml.example
8t.is/tmux-ai-party/docs/: INTERACTIVE_LAUNCHER.md  MCP_Servers_OpenAI_API_Summary.md  MIGRATION_TO_UV.md  QUICK_REFERENCE.md  README.md  ai_tmux_prompts.txt  git_commit_cheet_plan.md
8t.is/tmux-ai-party/scripts/: attach-client.sh  first_run_check.py  manage.sh  run-continuous-monitor.sh  run-openai-mcp.sh  run-standard-mcp.sh  setup-uv.sh  tai-setup.sh  thecheet.md
8t.is/tmux-ai-party/tai/: main.py  pyproject.toml
8t.is/tmux-ai-party/tai-website/: README.md  package.json  pnpm-workspace.yaml  tailwind.config.js  test-curl.sh
8t.is/tmux-ai-party/tai-website/src/: app.css  app.html
8t.is/tmux-ai-party/tai-website/src/routes/: +page.svelte  +server.ts
8t.is/tmux-ai-party/tai-website/src/routes/install/: +server.ts
8t.is/tmux-ai-party/tai-website/src/routes/setup/: +server.ts
8t.is/tmux-ai-party/tai-website/src/routes/setup/generate/: +server.ts
8t.is/tmux-ai-party/tai-website/src/routes/sh/: +server.ts
8t.is/tmux-ai-party/tai-website/src/routes/test/: +page.svelte
8t.is/tmux-ai-party/tests/: test_launcher_demo.py  test_monitor.py
8t.is/tmux-ai-party/tmux_ai_assistant/: __init__.py
Aye101/: .gitattributes
Formula/: smart-tree.rb
api/: main.py
archive/: RELEASE_NOTES_v3.2.0.md  RELEASE_NOTES_v3.3.0.md
aye-md/: ACHIEVEMENTS.md  README.md
bundles/: .temp_docs_aggregate_20250723_015447.md  docs_aggregate_20250723_015842.md  docs_bundle_20250723_015722.md  docs_bundle_20250723_015731.md  smart_tree_docs_single_byte.mq
cloud-init/: hetzner-feedback-worker.yaml
completions/: EXAMPLES.md  README.md  _st_enhanced  setup_zsh.sh  st.bash  st.zsh
config/: tmux-forest.yaml
docs/: AI_ASSISTANT_GUIDE.md  AI_QUICK_REFERENCE.md  CONTEXT_GATHERING.md  CRATE_PUBLISHING_PLAN.md  EIGHT_O_MODE_VISION.md  EMOTIONAL_MODE_IMPLEMENTATION.md  FEATURES_OVERVIEW.md  FUNCTION_MARKDOWN_FEATURE.md  FUNCTION_MARKDOWN_VISION.md  GIT_RELAY_VISION.md  HETZNER_DEPLOYMENT_GUIDE.md  HOME_DIRECTORY_SAFETY.md  INDEX.md  LLM_INTEGRATION.md  LLM_PROXY_CHEATSHEET.md  M8_FILE_VISION.md  M8_UNIFIED_FORMAT.md  MARQANT_AGGREGATE_SPEC.md  MARQANT_SPECIFICATION.md  MCP_AI_BEST_PRACTICES.md  MCP_EDIT_GUIDE.md  MCP_EDIT_IMPROVEMENTS.md  MEM8_ALIGNMENT_REPORT.md  MEM8_IMPLEMENTATION_SUMMARY.md  MEM8_MARQANT_INTEGRATION.md  NETWORK_EFFICIENT_COMPRESSION.md  NETWORK_GAMING_OPUS_EXAMPLE.md  NEXT_MISSIONS.md  PERMISSION_GATING_SYSTEM.md  QUANTUM_FORMAT_SUCCESS.md  QUANTUM_HANG_FIX.md  QUANTUM_JSON_SAFETY.md  QUANTUM_NATIVE_ACHIEVEMENT.md  QUANTUM_NATIVE_SPEC.md  QUANTUM_SEMANTIC.md  QUANTUM_SEMANTIC_COMPRESSION.md  RELEASE_V3_QUANTUM_AWAKENING.md  Room-For-Improvements.md  SECURITY_DISCLOSURE_AFFECTING_LLMs.md  SECURITY_VIGILANCE_VISION.md  (+14 more)
dxt/: .gitignore  ICON_TIPS.md  README.md  build-dxt.sh  manifest.json
examples/: README.md  SSE_QUICK_START.md  context_gathering_demo.rs  decode_m8.py  demo_partnership.sh  demo_relations.sh  demo_smart_edit.py  directory_diff.py  directory_evolution.py  dynamic_tokenizer_demo.md  emotional_demo.md  file_history_demo.sh  interactive_demo.md  markdown-output.md  mcp_explorer.py  mem8_demo.rs  mem8_full_demo.rs  mem8_git_demo.rs  (+25 more)
st-protocol/: Cargo.toml  README.md
st-protocol/src/: address.rs  auth.rs  error.rs  frame.rs  lib.rs  payload.rs  verb.rs
test_files/: Cargo.toml  README.md  backup.sql  data.csv  package.json  test.env  test.js  test.md  test.py  test.rs  test.tmp
(+443 files in other folders)
