[package]
name = "st"
version = "4.0.0-alpha"
edition = "2021"
authors = ["8bit-wraith", "Claude", "Omni", "8b-is Team"]
description = "Smart Tree - An intelligent, AI-friendly directory visualization tool"
repository = "https://github.com/8b-is/smart-tree" # Updated repository
license = "MIT"
readme = "README.md"
keywords = ["tree", "directory", "visualization", "ai", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.2"
anyhow = "1.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
colored = "2.1"
globset = "0.4"
regex = "1.10"
humansize = "2.1"
rayon = "1.10"
indicatif = "0.17"
hex = "0.4"
sha2 = "0.10.9"
toml = "0.8.23"
dirs = "5.0"
libc = "0.2"
termimad = "0.26.1"
once_cell = "1.19"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
whoami = "1.5"

# Terminal UI dependencies
ratatui = "0.25"
crossterm = "0.27"

# MCP (Model Context Protocol) support
tokio = { version = "1.42", features = ["full"] }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
dashmap = { version = "6.1" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_yaml = "0.9"

# SSE support
notify = { version = "6.1", features = ["serde"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Tree-sitter for smart code editing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-ruby = "0.20"

[[bin]]
name = "mq"
path = "src/bin/mq.rs"

[[bin]]
name = "tree"
path = "src/bin/tree.rs"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"



[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
