[workspace]
members = ["expert_prompt_engineer"]
exclude = ["marqant"]  # Marqant is a git submodule with its own Cargo.toml

[package]
name = "st"
version = "6.5.1"
edition = "2021"
authors = ["8bit-wraith", "Claude", "Omni", "8b-is Team"]
description = "Smart Tree - An intelligent, AI-friendly directory visualization tool"
repository = "https://github.com/8b-is/smart-tree"
license = "MIT"
readme = "README.md"
keywords = ["tree", "directory", "visualization", "ai", "cli"]
categories = ["command-line-utilities", "filesystem"]
default-run = "st"

[dependencies]
# Core CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.2"
anyhow = "1.0"
thiserror = "2.0"

# Filesystem
walkdir = "2.5"
globset = "0.4"
glob = "0.3"
notify = { version = "6.1", features = ["serde"] }
dirs = "5.0"
shellexpand = "3.1"
which = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
csv = "1.3"
bincode = "1.3"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP/Networking
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
hyper = "1.7"
http = "1.3"

# Text processing
regex = "1.10"
similar = "2.4"

# Encoding/Compression
flate2 = "1.0"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
crc32fast = "1.4"

# Terminal output
colored = "2.1"
termimad = "0.26"
terminal_size = "0.3"

# Date/Time
chrono = { version = "0.4", features = ["serde", "clock"] }

# Utilities
humansize = "2.1"
rayon = "1.10"
once_cell = "1.19"
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
whoami = "1.5"
dashmap = "6.1"
libc = "0.2"
fuzzy-matcher = "0.3"  # Used by MCP smart_background_searcher

# Git operations (will become g8t)
gix = { version = "0.73", default-features = false, features = ["blocking-network-client"] }

# Tree-sitter for smart code editing
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"

# Proc macro support (for tree-sitter)
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
cc = "1.2"
shlex = "1.3"

# Marqant compression
marqant = { path = "marqant" }

# === OPTIONAL FEATURES ===

# Terminal UI (spicy mode) - disabled by default
ratatui = { version = "0.25", optional = true }
crossterm = { version = "0.27", optional = true }
syntect = { version = "5.0", optional = true }
artem = { version = "2.0", optional = true }

# Dashboard GUI - disabled by default (daemon-only)
egui = { version = "0.32", optional = true }
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow"], optional = true }
egui_extras = { version = "0.32", optional = true }
winit = { version = "0.30", optional = true }

# Local LLM support (candle)
candle-core = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }

[[bin]]
name = "mq"
path = "src/bin/mq.rs"

[[bin]]
name = "tree"
path = "src/bin/tree.rs"

[[bin]]
name = "m8"
path = "src/bin/m8.rs"

[[bin]]
name = "import-claude-memories"
path = "src/bin/import_claude_memories.rs"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = ["std"]
std = []
alloc = []
mem8 = []

# Terminal UI mode (spicy)
tui = ["ratatui", "crossterm", "syntect", "artem"]

# Dashboard GUI (for daemon mode with human-in-the-loop)
dashboard = ["egui", "eframe", "egui_extras", "winit"]

# Local LLM inference
candle = ["candle-core", "candle-transformers", "candle-nn", "hf-hub", "tokenizers"]

# Full features
full = ["tui", "dashboard", "candle"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
