[package]
name = "eighty-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eighty-core = { path = "../core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "eighty-api"
path = "src/main.rs"