[package]
name = "eighty-container"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eighty-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true }
blake3 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
uuid = { workspace = true }
tracing = { workspace = true }