[package]
name = "eighty-feedback"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eighty-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
tracing = { workspace = true }